# minimal_proto_max_external_dynamic

./: CMakeLists.txt  CMakePresets.json  README.md  getlibs.py  lib_files_list.txt  minimal_proto_max_external_dynamic.cpp
libraries/protobuf/: CMakeLists.txt  CMakePresets.json  main.cpp
libraries/protobuf/proto/: message.proto
